# Flux

./: Cargo.toml  README.md
src/: main.rs  toml_files.rs
src/core/apps/: indexer.rs  mod.rs  model.rs  parser.rs  scanner.rs  utils.rs
src/ui/: app.rs
src/ui/widgets/: input_with_list.rs  list_apps.rs  mod.rs  text_input.rs
