[package]
name = "stryde"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
freedesktop-file-parser = "0.3.1"
freedesktop-icons = "0.4.0"
bincode = "1.3.3"
serde = {version = "1.0.228", features = ["derive"]}
iced = {version = "0.13.1", default-features = false, features = ["tiny-skia", "image", "svg"]}
image = "0.25.9"
